# eventure

./: .env.example  .gitignore  LEARNING_PLAN.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2839a26d5eb5_create_users_table.py  4aa72ead9077_create_events_and_tasks_tables.py  e9c250359a41_create_events_and_tasks_tables.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  events.py  tasks.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  base.py  event.py  task.py  user.py
backend/app/db/: session.py
backend/app/models/: event.py  task.py  user.py
backend/app/schemas/: __init__.py  event.py  task.py  token.py  user.py
backend/app/services/: __init__.py  auth_service.py  event_service.py  task_service.py
frontend/: dashboard.html  index.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  dashboard.js
